* fixed 12 minor layout issues (Few files) [Bug 3729]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8996 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -1605,7 +1605,10 @@ table.table_list a.collapse
 {
 	margin: 10px 5px 0 1em;
 }
-
+img.new_posts
+{
+	padding: 0 0.1em;
+}
 /* Styles for the message (topic) index.
 ---------------------------------------------------- */
 
